Fix for large display.

--- a/public/javascripts/todo-list/todo-list.template.html
+++ b/public/javascripts/todo-list/todo-list.template.html
@@ -1,4 +1,4 @@
-<div class="col-md-4">
+<div class="col-lg-8">
     <form ng-submit="$ctrl.todoAdd()" class="item-add-form" >
         <input type="text" ng-model="$ctrl.todoInput" maxlength="100" palaceholder="Add new item" class="form-control todo-input">
         <input type="submit" value="Add new" class="btn btn-success" >
