--- a/public/javascripts/todo-list/todo-list.template.html
+++ b/public/javascripts/todo-list/todo-list.template.html
@@ -1,6 +1,6 @@
 <div class="col-lg-8">
     <form ng-submit="$ctrl.todoAdd()" class="item-add-form" >
-        <input type="text" ng-model="$ctrl.todoInput" maxlength="100" palaceholder="Add new item" class="form-control todo-input">
+        <input type="text" ng-model="$ctrl.todoInput" maxlength="100" class="form-control todo-input">
         <input type="submit" value="Add new" class="btn btn-success" >
     </form>
     <ul ng-repeat="todoItem in $ctrl.todoItems">
